# qLDPC_sim

./: .gitignore  .gitignore.pytest  README.md  pyproject.toml  pytest.ini  stimraw_cohen.ipynb
notebooks/: check_mxx.ipynb  ckbb_cnot.ipynb  ckbb_cnot_demo.ipynb  rsc_surge_cnot_demo.ipynb  sandbox.ipynb
src/qldpc_sim/: __init__.py
src/qldpc_sim/ckbb_surgery/: __init__.py  measurement.py  rsc_surgery.py
src/qldpc_sim/codes/: __init__.py  stabiliser_code.py
src/qldpc_sim/compiler/: __init__.py  pauli_measurement.py  qec_experiment.py  syndrome_extraction_round.py  syndrome_extraction_rounds.py
src/qldpc_sim/data_structure/: __init__.py  logical_operator.py  logical_qubit.py  pauli.py  tanner_graph.py  tanner_graph_algebra.py
src/qldpc_sim/qec_code/: __init__.py  code_property.py  css_code.py  ec_code.py  hgp49_16_3.py  repetition_code.py  rotated_surface_code.py  rsc3.py  surface_code.py  toric_code.py
src/qldpc_sim/qec_objects/: __init__.py  bit_types.py  experiment_weight.py  logical_operator.py  pauli_operator.py  stabiliser.py
src/qldpc_sim/qldpc_experiment/: __init__.py  compilers.py  context.py  qec_gadget.py  quantum_memory.py  record.py
src/qldpc_sim/rsc_surgery/: rsc_surgery.py
tests/: __init__.py  conftest.py
tests/codes/: __init__.py  test_stabiliser_code.py
tests/compiler/: test_qec_experiment.py
tests/data_structure/: __init__.py  test_logical_operator.py  test_logical_qubit.py  test_pauli.py  test_tanner_graph.py  test_tanner_graph_algebra.py
tests/qec_objects/: __init__.py  test_pauli_operator.py  test_stabiliser.py
(+1 files in other folders)
